--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,419 +1,7 @@
-@import "colors";
-@import "fonts";
+@import 'base';
+@import 'layout/header';
+@import 'layout/intro';
+@import 'layout/different';
+@import 'layout/how';
+@import 'layout/footer';
 
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
-
-body {
-  font-size: 16px;
-  font-family: $fontBody;
-}
-
-@mixin section-link {
-  display: inline-block;
-  border: 2px solid white;
-  margin-top: 2em;
-  padding: 8px 30px;
-  color: white;
-  text-decoration: none;
-  text-transform: uppercase;
-  letter-spacing: 200%;
-}
-
-@mixin min-width($min-width) {
-  @media (min-width: $min-width) {
-    @content;
-  }
-}
-
-@mixin max-width($max-width) {
-  @media (max-width: $max-width) {
-    @content;
-  }
-}
-
-.decorative-line {
-  height: 2px;
-  background-color: $darkGrayishViolet;
-  opacity: 0.4;
-  margin: 2em auto;
-
-  &--half-width {
-    width: 50%;
-  }
-}
-
-.container {
-  max-width: 1000px;
-  margin: 0 auto;
-}
-
-.header {
-  position: relative;
-  height: 80px;
-  background-color: white;
-  padding: 1.4em;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  z-index: 2;
-
-  &__img {
-    height: 1.4em;
-  }
-
-  &__btn {
-    border: none;
-    cursor: pointer;
-    height: 32px;
-
-    @include min-width(900px) {
-      display: none;
-    }
-  }
-
-  &__nav {
-    display: none;
-
-    @include min-width(900px) {
-      display: block;
-    }
-  }
-
-  &__list {
-    display: flex;
-    list-style: none;
-  }
-
-  &__item:last-of-type {
-    border: 2px solid black;
-
-    & .header__link {
-      color: black;
-    }
-  }
-
-  &__link {
-    display: inline-block;
-    padding: 0.5em 2em;
-    font-weight: 700;
-    color: $darkGrayishViolet;
-    text-decoration: none;
-    text-transform: uppercase;
-    letter-spacing: 0.1em;
-  }
-}
-
-.mobile-nav {
-  transform: translateY(-100vh);
-  position: fixed;
-  width: 100vw;
-  height: calc(100vh - 80px);
-  background: url("../images/bg-pattern-mobile-nav.svg") no-repeat bottom center /
-    contain;
-  background-color: $veryDarkViolet;
-  transition: all 0.3s ease;
-  z-index: 1;
-
-  @include min-width(650px) {
-    background-position: bottom right;
-    background-size: 60%;
-  }
-
-  &__list {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 2em;
-    list-style: none;
-  }
-
-  &__item {
-    width: 90%;
-    margin-bottom: 1em;
-
-    &:last-of-type a {
-      border: 2px solid white;
-    }
-  }
-
-  &__link {
-    display: block;
-    font-size: 1.4em;
-    text-align: center;
-    padding: 12px 10px;
-    color: $veryLightGray;
-    text-decoration: none;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-  }
-}
-
-.intro {
-  position: relative;
-  background-color: $darkViolet;
-  color: white;
-  text-align: center;
-
-  @include min-width(700px) {
-    background: url("../images/bg-pattern-intro-right-desktop.svg") no-repeat
-      100% -130% / auto 90%;
-    background-color: $darkViolet;
-    text-align: left;
-  }
-
-  &__container {
-    @include min-width(700px) {
-      position: relative;
-      padding: 6em 1em;
-    }
-  }
-
-  &__picture {
-    @include min-width(700px) {
-      width: 45%;
-      max-width: 420px;
-      position: absolute;
-      right: 1em;
-      top: 15%;
-    }
-  }
-
-  &__img {
-    width: 100%;
-  }
-
-  &::after {
-    content: "";
-    background-image: url("../images/bg-pattern-intro-right-mobile.svg");
-    position: absolute;
-    width: 124px;
-    height: 330px;
-    bottom: -195px;
-    right: 0;
-
-    @include min-width(700px) {
-      background: none;
-    }
-
-    @include min-width(1250px) {
-      background: url("../images/bg-pattern-intro-left-desktop.svg") top left /
-        100% no-repeat;
-      left: 0;
-      bottom: -250px;
-      width: 150px;
-      height: 402px;
-    }
-  }
-
-  &__content {
-    padding: 6em 1em;
-    position: relative;
-    background: url("../images/bg-pattern-intro-left-mobile.svg") no-repeat;
-
-    @include min-width(700px) {
-      padding: 0;
-      max-width: 50%;
-      background: none;
-    }
-  }
-
-  &__decorative-line {
-    @include max-width(699px) {
-      display: none;
-    }
-
-    @include min-width(700px) {
-      width: 6em;
-      margin: 2em 0;
-    }
-  }
-
-  &__heading {
-    font-size: 2.5em;
-    font-family: $fontHeadings;
-    margin-bottom: 0.5em;
-  }
-
-  &__subheading {
-    color: $veryLightGray;
-    font-size: 1em;
-    font-weight: 400;
-    line-height: 1.4;
-  }
-
-  &__link {
-    @include section-link();
-  }
-}
-
-.different {
-  padding: 6em 1em;
-  text-align: center;
-
-  @media (min-width: 480px) and (max-width: 799px) {
-    max-width: 500px;
-    margin: 0 auto;
-  }
-
-  &__decorative-line {
-    @include min-width(800px) {
-      width: 6em;
-      margin: 2em 0;
-    }
-  }
-
-  &__heading {
-    font-family: $fontHeadings;
-    font-size: 2.5em;
-    color: $darkViolet;
-    margin-bottom: 0.5em;
-
-    @include min-width(800px) {
-      text-align: left;
-    }
-  }
-
-  &__content {
-    @include min-width(800px) {
-      text-align: left;
-      display: flex;
-    }
-  }
-
-
-  &__item {
-    padding: 2em 0;
-
-    @include min-width(800px) {
-      margin-right: 30px;
-    }
-  }
-
-  &__item:last-child {
-    @include min-width(800px) {
-      margin-right: 0;
-    }
-  }
-
-  &__item-logo {
-    margin-bottom: 1.5em;
-  }
-
-  &__item-heading {
-    font-family: $fontHeadings;
-    font-size: 1.5em;
-    margin-bottom: 1em;
-    color: $darkViolet;
-  }
-
-  &__item-text {
-    color: $grayishBlue;
-    line-height: 1.4;
-  }
-}
-
-.how {
-  margin: 3em 1em;
-  padding: 4.5em 1em;
-  background: url(../images/bg-pattern-how-we-work-mobile.svg) no-repeat top
-    right / contain;
-  background-color: $darkViolet;
-  color: white;
-  text-align: center;
-
-  @include min-width(600px) {
-    padding: 4.5em 4em;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-image: url(../images/bg-pattern-how-we-work-desktop.svg);
-    text-align: left;
-  }
-
-  &__heading {
-    font-family: $fontHeadings;
-    font-size: 2.5em;
-
-    @include min-width(600px) {
-      flex-basis: 50%;
-    }
-  }
-
-  &__link {
-    @include section-link();
-  }
-}
-
-.footer {
-  background: url("../images/bg-pattern-footer-mobile.svg") no-repeat;
-  background-color: $veryLightGray;
-  text-align: center;
-  padding: 5em 1em;
-  margin-top: 120px;
-
-  @include min-width(600px) {
-    text-align: left;
-    background-image: url("../images/bg-pattern-footer-desktop.svg");
-  }
-
-  &__socials {
-    margin-bottom: 2em;
-
-    @include min-width(500px) {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
-  }
-
-  &__logo {
-    margin-bottom: 1em;
-
-    @include min-width(500px) {
-      margin-bottom: 0;
-    }
-  }
-
-  &__social-link {
-    margin: 10px;
-  }
-
-  &__links {
-    @include min-width(600px) {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-      justify-items: center;
-      text-align: center;
-    }
-
-    @include min-width(911px) {
-      justify-items: start;
-      text-align: left;
-    }
-  }
-
-  &__subheading {
-    font-size: 0.9em;
-    color: $grayishBlue;
-    margin: 2em 0;
-    text-transform: uppercase;
-  }
-
-  &__list {
-    list-style: none;
-  }
-
-  &__link {
-    font-weight: 700;
-    font-size: 0.9em;
-    text-decoration: none;
-    color: $darkViolet;
-    text-transform: uppercase;
-    letter-spacing: 0.1em;
-    line-height: 2;
-  }
-}
