--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,34 @@ body {
   margin: 0 auto;
 }
 
+.link {
+  color: #2b272f;
+  display: inline-block;
+  font-weight: 700;
+  text-decoration: none;
+  text-transform: uppercase;
+  letter-spacing: .2em;
+}
+
+.link--gray {
+  color: #837d87;
+}
+
+.link--white {
+  color: #fafafa;
+}
+
+.link--border {
+  color: #fafafa;
+  border: 2px solid #fafafa;
+  padding: .5em 2em;
+}
+
+.link--border-black {
+  border: 2px solid #2b272f;
+  padding: .5em 2em;
+}
+
 .header {
   position: relative;
   height: 80px;
@@ -75,25 +103,15 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   list-style: none;
 }
 
-.header__item:last-of-type {
-  border: 2px solid black;
-}
-
-.header__item:last-of-type .header__link {
-  color: black;
-}
-
 .header__link {
-  display: inline-block;
-  padding: 0.5em 2em;
-  font-weight: 700;
-  color: #837d87;
-  text-decoration: none;
-  text-transform: uppercase;
-  letter-spacing: 0.1em;
+  padding-left: 2em;
+  padding-right: 2em;
 }
 
 .mobile-nav {
@@ -138,17 +156,6 @@ body {
 
 .mobile-nav__item:last-of-type a {
   border: 2px solid white;
-}
-
-.mobile-nav__link {
-  display: block;
-  font-size: 1.4em;
-  text-align: center;
-  padding: 12px 10px;
-  color: #fafafa;
-  text-decoration: none;
-  text-transform: uppercase;
-  letter-spacing: 2px;
 }
 
 .intro {
@@ -254,14 +261,7 @@ body {
 }
 
 .intro__link {
-  display: inline-block;
-  border: 2px solid white;
   margin-top: 2em;
-  padding: 8px 30px;
-  color: white;
-  text-decoration: none;
-  text-transform: uppercase;
-  letter-spacing: 200%;
 }
 
 .different {
@@ -376,14 +376,8 @@ body {
 }
 
 .how__link {
-  display: inline-block;
-  border: 2px solid white;
-  margin-top: 2em;
-  padding: 8px 30px;
   color: white;
-  text-decoration: none;
-  text-transform: uppercase;
-  letter-spacing: 200%;
+  margin-top: 2em;
 }
 
 .footer {
@@ -463,12 +457,7 @@ body {
 }
 
 .footer__link {
-  font-weight: 700;
   font-size: 0.9em;
-  text-decoration: none;
-  color: #2d2640;
-  text-transform: uppercase;
-  letter-spacing: 0.1em;
   line-height: 2;
 }
 /*# sourceMappingURL=style.css.map */
