--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -21,6 +21,10 @@
     cursor: pointer;
     height: 32px;
 
+    &:focus {
+      outline: none;
+    }
+
     @include min-width(900px) {
       display: none;
     }
@@ -46,6 +50,7 @@
 }
 
 .mobile-nav {
+  display: none;
   transform: translateY(-100vh);
   position: fixed;
   width: 100vw;
