--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -49,6 +49,10 @@ body {
 }
 
 // UTILS
+.modal-open {
+  overflow: hidden;
+}
+
 .decorative-line {
   height: 2px;
   background-color: $darkGrayishViolet;
