--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,6 +1,3 @@
-.menu-open {
-  overflow: hidden;
-}
 
 .header {
   position: relative;
@@ -60,6 +57,11 @@
   background-color: $veryDarkViolet;
   transition: all 0.3s ease;
   z-index: 1;
+
+  &--open {
+    transform: translateY(0);
+    display: block;
+  }
 
   @include min-width(650px) {
     background-position: bottom right;
