--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
 }
 
 *:focus {
-  border: 5px solid red !important;
+  outline: 5px solid #95a9c6 !important;
 }
 
 body {
@@ -79,20 +79,25 @@ body {
 }
 
 .header {
-  position: relative;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 2;
   height: 80px;
   background-color: white;
-  padding: 1.4em;
+}
+
+.header__container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  padding: 1.4em;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  z-index: 2;
 }
 
 .header__img {
@@ -100,9 +105,14 @@ body {
 }
 
 .header__btn {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   border: none;
   cursor: pointer;
-  height: 32px;
 }
 
 .header__btn:focus {
@@ -143,9 +153,11 @@ body {
   display: none;
   -webkit-transform: translateY(-100vh);
           transform: translateY(-100vh);
+  padding-top: 80px;
   position: fixed;
+  top: 0;
   width: 100vw;
-  height: calc(100vh - 80px);
+  height: 100vh;
   background: url("../images/bg-pattern-mobile-nav.svg") no-repeat bottom center/contain;
   background-color: #2b272f;
   -webkit-transition: all 0.3s ease;
@@ -198,6 +210,7 @@ body {
   background-color: #2d2640;
   color: white;
   text-align: center;
+  margin-top: 80px;
 }
 
 @media (min-width: 700px) {
