--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,22 +1,28 @@
 
 .header {
-  position: relative;
+  position: fixed;
+  top: 0;       
+  width: 100%;
+  z-index: 2;
   height: 80px;
   background-color: white;
-  padding: 1.4em;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  z-index: 2;
+  
+  &__container {
+    display: flex;
+    padding: 1.4em;
+    justify-content: space-between;
+    align-items: center;
+  }
 
   &__img {
     height: 1.4em;
   }
 
   &__btn {
+    display: flex;
+    align-items: center;
     border: none;
     cursor: pointer;
-    height: 32px;
 
     &:focus {
       outline: none;
@@ -49,9 +55,11 @@
 .mobile-nav {
   display: none;
   transform: translateY(-100vh);
+  padding-top: 80px;
   position: fixed;
+  top: 0;
   width: 100vw;
-  height: calc(100vh - 80px);
+  height: 100vh;
   background: url("../images/bg-pattern-mobile-nav.svg") no-repeat bottom center /
     contain;
   background-color: $veryDarkViolet;
