add structure of html and BEM classes

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -5,6 +5,8 @@ $light-blue: hsl(233, 100%, 69%);
 $dark-grayish-blue: hsl(210, 10%, 33%);
 $grayish-blue: hsl(201, 11%, 66%);
 
+$section-margin: 10em;
+
 * {
   box-sizing: border-box;
   margin: 0;
