--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,6 @@ body {
   border-radius: 30px;
   padding: 0.7em 3em;
   border: none;
-  margin: 0.6em 0;
   color: #d8d1d1;
   background-color: #26baa4;
 }
@@ -40,6 +39,7 @@ body {
       -ms-flex-align: center;
           align-items: center;
   text-align: center;
+  margin-bottom: 10em;
 }
 
 .header__logo {
@@ -52,8 +52,12 @@ body {
   margin-bottom: 0.5em;
 }
 
-.header__subheading {
+.header__descr {
   font-size: 1em;
   margin-bottom: 2em;
+}
+
+.header__btn {
+  margin: 0.6em 0;
 }
 /*# sourceMappingURL=style.css.map */
