--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -6,6 +6,7 @@
   flex-direction: column;
   align-items: center;
   text-align: center;
+  margin-bottom: $section-margin;
 
   &__logo {
     margin-top: 9em;
@@ -17,8 +18,12 @@
     margin-bottom: 0.5em;
   }
 
-  &__subheading {
+  &__descr {
     font-size: 1em;
     margin-bottom: 2em;
+  }
+
+  &__btn {
+    margin: 0.6em 0;
   }
 }
