--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,2 +1,8 @@
 @import '_base.scss';
 @import './layout/_header.scss';
+@import './layout/_track.scss';
+@import './layout/_footer.scss';
+@import './layout/_access.scss';
+@import './layout/_tools.scss';
+@import './layout/_brands.scss';
+@import './layout/_download.scss';
