--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -7,6 +7,7 @@
   align-items: center;
   text-align: center;
   margin-bottom: $section-margin;
+  padding: 0 2em;
 
   &__logo {
     margin-top: 9em;
@@ -14,8 +15,9 @@
   }
 
   &__heading {
+    font-size: 1.9em;
     color: $dark-grayish-blue;
-    margin-bottom: 0.5em;
+    margin-bottom: $heading-margin;
   }
 
   &__descr {
