--- a/css/style.css
+++ b/css/style.css
@@ -100,6 +100,47 @@ body {
 
 .footer {
   background-color: #f4f5f6;
+  padding-bottom: 3em;
+  font-size: 1.2em;
+}
+
+.footer__logo {
+  padding: 3.5em 0 1.5em;
+}
+
+.footer__img {
+  max-width: 5em;
+}
+
+.footer__nav {
+  margin-bottom: 3em;
+}
+
+.footer__list {
+  list-style-type: none;
+}
+
+.footer__item {
+  margin: 1.5em 0;
+}
+
+.footer__link {
+  color: #9fabb2;
+  text-decoration: none;
+}
+
+.footer__list-socials {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  list-style-type: none;
+}
+
+.footer__item-socials {
+  margin: 0 1em;
 }
 
 .access {
