--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -23,5 +23,11 @@ body {
 }
 
 .container {
-  padding: 0 2em;  
+  padding: 0 2em; 
+  margin-left: auto;
+  margin-right: auto; 
+}
+
+.container--small {
+  max-width: 700px;
 }
