--- a/sass/layout/_brands.scss
+++ b/sass/layout/_brands.scss
@@ -4,4 +4,16 @@
   &__logo {
     margin-bottom: 4em;
   }
+
+  @media (min-width: 700px) {
+    & {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    &__logo {
+      margin: 0 2em ;
+    }
+  }
 }
