--- a/css/style.css
+++ b/css/style.css
@@ -144,8 +144,34 @@ body {
   font-size: 1.2em;
 }
 
+@media (min-width: 700px) {
+  .footer {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    padding: 2em 0;
+  }
+}
+
 .footer__logo {
   padding: 3.5em 0 1.5em;
+}
+
+@media (min-width: 700px) {
+  .footer__logo {
+    padding: 0;
+  }
+}
+
+@media (min-width: 700px) {
+  .footer__img {
+    width: 55px;
+  }
 }
 
 .footer__img {
@@ -156,12 +182,43 @@ body {
   margin-bottom: 3em;
 }
 
+@media (min-width: 700px) {
+  .footer__nav {
+    margin-bottom: 0;
+  }
+}
+
 .footer__list {
   list-style-type: none;
 }
 
+@media (min-width: 700px) {
+  .footer__list {
+    display: -ms-grid;
+    display: grid;
+    gap: 1em 3em;
+    text-align: left;
+    -ms-grid-rows: (1fr)[3];
+        grid-template-rows: repeat(3, 1fr);
+    grid-auto-flow: column;
+  }
+}
+
+@media (min-width: 1000px) {
+  .footer__list {
+    -ms-grid-rows: (1fr)[2];
+        grid-template-rows: repeat(2, 1fr);
+  }
+}
+
 .footer__item {
   margin: 1.5em 0;
+}
+
+@media (min-width: 700px) {
+  .footer__item {
+    margin: 0;
+  }
 }
 
 .footer__link {
@@ -265,6 +322,8 @@ body {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
   }
   .brands__logo {
     margin: 0 2em;
@@ -286,5 +345,14 @@ body {
 
 .download__btn {
   margin: 0.6em 0;
+}
+
+@media (min-width: 700px) {
+  .download__btn {
+    padding-left: 1.5em;
+    padding-right: 1.5em;
+    margin-left: .5em;
+    margin-right: .5em;
+  }
 }
 /*# sourceMappingURL=style.css.map */
