--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -3,8 +3,25 @@
   padding-bottom: 3em;
   font-size: 1.2em;
 
+  @media (min-width: 700px) {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 2em 0;
+  }
+
   &__logo {
     padding: 3.5em 0 1.5em;
+
+    @media (min-width: 700px) {
+      padding: 0;
+    }
+  }
+
+  &__img {
+    @media (min-width: 700px) {
+      width: 55px;
+    }
   }
 
   &__img {
@@ -13,14 +30,34 @@
 
   &__nav {
     margin-bottom: 3em;
+
+    @media (min-width: 700px) {
+      margin-bottom: 0;
+    }
   }
 
   &__list {
     list-style-type: none;
+
+    @media (min-width: 700px) {
+      display: grid;
+      gap: 1em 3em;
+      text-align: left;;
+      grid-template-rows: repeat(3, 1fr);
+      grid-auto-flow: column;
+    }
+
+    @media (min-width: 1000px) {
+      grid-template-rows: repeat(2, 1fr);
+    }
   }
 
   &__item {
     margin: 1.5em 0;
+
+    @media (min-width: 700px) {
+      margin: 0;
+    }
   }
 
   &__link {
