--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,10 @@ body {
   max-width: 700px;
 }
 
+.container--big {
+  max-width: 1440px;
+}
+
 .button {
   font-size: 1.2em;
   font-weight: 600;
