--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -6,8 +6,11 @@
   border: none;
   color: rgb(216, 209, 209);
   background-color: $strong-cyan;
+  border-bottom: 3px solid darken($strong-cyan, 7%);
+  box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.301);
 
   &--blue {
     background-color: $light-blue;
+    border-bottom: 3px solid darken($light-blue, 7%);
   }
 }
