--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Spartan:wght@500;700&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -5,9 +6,89 @@
           box-sizing: border-box;
 }
 
+body {
+  background-color: #deeded;
+  font-size: 15px;
+  font-family: 'Spartan', sans-serif;
+}
+
+.container {
+  padding: 0 20px;
+  margin: 0 auto;
+}
+
 .header {
-  height: 160px;
+  height: 150px;
   background-color: #5ba4a4;
   background-image: url("../images/bg-header-mobile.svg");
+}
+
+.jobs {
+  margin-top: 70px;
+}
+
+.job {
+  background-color: #effafa;
+  padding: 20px;
+  padding-top: 3em;
+  position: relative;
+}
+
+.job__logo {
+  position: absolute;
+  top: 0;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+}
+
+.job__header {
+  margin: 1em 0;
+}
+
+.job__company {
+  color: #5ba4a4;
+  font-weight: 700;
+  font-size: 1.1em;
+  margin-right: 1em;
+}
+
+.job__label {
+  display: inline-block;
+  background-color: #5ba4a4;
+  margin: 0 .3em;
+  padding: 10px;
+  border-radius: 20px;
+  color: #effafa;
+  text-transform: uppercase;
+  font-weight: 700;
+}
+
+.job__label--dark {
+  background-color: black;
+}
+
+.job__title {
+  font-weight: 700;
+  font-size: 1.3em;
+  margin: 1em 0;
+}
+
+.job__details {
+  margin: 1em 0;
+  color: #7b8e8e;
+}
+
+.job__tags {
+  margin: 1em -15px;
+}
+
+.job__tag {
+  display: inline-block;
+  background-color: #eef6f6;
+  color: #5ba4a4;
+  font-weight: 700;
+  border-radius: 4px;
+  padding: 10px;
+  margin: 7px 15px;
 }
 /*# sourceMappingURL=style.css.map */
