--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -1,32 +1,11 @@
-// # Front-end Style Guide
-
-// ## Layout
-
-// The designs were created to the following widths:
-
-// - Mobile: 375px
-// - Desktop: 1440px
-
-// ## Colors
-
-// ### Primary
+@import url('https://fonts.googleapis.com/css2?family=Spartan:wght@500;700&display=swap');
 
 $desaturated-dark-cyan: hsl(180, 29%, 50%);
-
-// ### Neutral
-
 $light-grayish-cyan-bg: hsl(180, 52%, 96%);
 $light-grayish-cyan-ftr: hsl(180, 31%, 95%);
 $dark-grayish-cyan: hsl(180, 8%, 52%);
 $very-dark-grayish-cyan: hsl(180, 14%, 20%);
 
-// ## Typography
-
-// ### Body Copy
-
-// - Font size: 15px
-
-// ### Headings
 
 // - Family: [Spartan](https://fonts.google.com/specimen/Spartan)
 // - Weights: 500, 700
@@ -36,4 +15,15 @@ $very-dark-grayish-cyan: hsl(180, 14%, 20%);
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+body {
+  background-color: lighten($desaturated-dark-cyan, 40%);
+  font-size: 15px;
+  font-family: 'Spartan', sans-serif;
+}
+
+.container {
+  padding: 0 20px;
+  margin: 0 auto;
 }
