--- a/css/style.css
+++ b/css/style.css
@@ -28,17 +28,41 @@ body {
 }
 
 .job {
-  background-color: #effafa;
-  padding: 20px;
-  padding-top: 3em;
   position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-bottom: 30px;
+}
+
+.job__content {
+  position: relative;
+  background-color: #effafa;
+  -webkit-box-shadow: 0px 5px 20px #b2bdbd;
+          box-shadow: 0px 5px 20px #b2bdbd;
+  margin-top: 44px;
+  padding: 0 25px;
+  padding-top: 40px;
+  border-radius: 10px;
+  overflow: hidden;
+}
+
+.job__content::before {
+  content: "";
+  position: absolute;
+  display: inline-block;
+  left: 0;
+  top: 0;
+  width: 7px;
+  height: 100%;
+  background-color: #5ba4a4;
 }
 
 .job__logo {
   position: absolute;
   top: 0;
-  -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
+  left: 25px;
+  z-index: 2;
 }
 
 .job__header {
@@ -78,8 +102,19 @@ body {
   color: #7b8e8e;
 }
 
+.job__detail:not(:last-child)::after {
+  content: "";
+  display: inline-block;
+  width: 5px;
+  height: 5px;
+  border-radius: 50%;
+  background-color: #7b8e8e;
+  vertical-align: middle;
+  margin: 0 8px;
+}
+
 .job__tags {
-  margin: 1em -15px;
+  margin: 1em -10px;
 }
 
 .job__tag {
@@ -89,6 +124,6 @@ body {
   font-weight: 700;
   border-radius: 4px;
   padding: 10px;
-  margin: 7px 15px;
+  margin: 7px 10px;
 }
 /*# sourceMappingURL=style.css.map */
