--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -7,6 +7,8 @@ $dark-grayish-cyan: hsl(180, 8%, 52%);
 $very-dark-grayish-cyan: hsl(180, 14%, 20%);
 
 
+$box-shadow: 0px 5px 20px lighten($dark-grayish-cyan, 20%);
+
 * {
   margin: 0;
   padding: 0;
@@ -22,4 +24,16 @@ body {
 .container {
   padding: 0 20px;
   margin: 0 auto;
+}
+
+// MIXINS
+
+@mixin tag {
+  display: inline-block;
+  background-color: $light-grayish-cyan-ftr;
+  color: $desaturated-dark-cyan;
+  font-weight: 700;
+  border: 0;
+  border-radius: 4px;
+  margin: 7px 10px;
 }
