--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -1,5 +1,51 @@
 .header {
-  height: 150px;
-  background-color: $desaturated-dark-cyan;
-  background-image: url("../images/bg-header-mobile.svg");
+  margin-bottom: 40px;
+
+  &__bg {
+    position: relative;
+    height: 150px;
+    background-color: $desaturated-dark-cyan;
+    background-image: url("../images/bg-header-mobile.svg");
+  }
+
+  &__filters {
+    position: relative;
+    min-height: 100px;
+    top: -50px;
+    padding: 15px;
+    margin: 0 20px;
+    margin-bottom: -50px;
+    background-color: $light-grayish-cyan-bg;
+    border-radius: 5px;
+    display: flex;
+    justify-content: space-between;
+    box-shadow: $box-shadow;
+  }
+
+  &__tag {
+    @include tag;
+    display: inline-flex;
+    overflow: hidden;
+  }
+
+  &__tag-text {
+    display: inline-block;
+    padding: 7px 15px;
+  }
+
+  &__icon {
+    display: inline-flex;
+    align-items: center;
+    padding: 0 7px;
+    background: $desaturated-dark-cyan;
+  }
+
+  &__clear {
+    align-self: center;
+    background: none;
+    border: none;
+    padding: 0 20px;
+    font-size: 1.2em;
+    color: $dark-grayish-cyan;
+  }
 }
