--- a/sass/_job.scss
+++ b/sass/_job.scss
@@ -1,6 +1,3 @@
-.jobs {
-  margin-top: 70px;
-}
 
 .job {
   position: relative;
@@ -10,7 +7,7 @@
   &__content {
     position: relative;
     background-color: $light-grayish-cyan-bg;
-    box-shadow: 0px 5px 20px lighten($dark-grayish-cyan, 20%);
+    box-shadow: $box-shadow;
     margin-top: 44px;
     padding: 0 25px;
     padding-top: 40px;
@@ -89,12 +86,7 @@
   }
 
   &__tag {
-    display: inline-block;
-    background-color: $light-grayish-cyan-ftr;
-    color: $desaturated-dark-cyan;
-    font-weight: 700;
-    border-radius: 4px;
+    @include tag;
     padding: 10px;
-    margin: 7px 10px;
   }
 }
